--- a/tcc-front-end/src/app/login/login.component.html
+++ b/tcc-front-end/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="login-box">
     <div class="login-logo">
-      <a href="../../index2.html"><b>Connect</b>U</a>
+      <a><b>Connect</b>U</a>
     </div>
     
     <div class="login-box-body">
@@ -25,7 +25,7 @@
         </div>
         <div class="row">
           <div class="col-xs-12">
-            <button (click)="login(form.value)" type="submit" class="btn btn-primary btn-block btn-flat">Login</button>
+            <button [disabled]="!form.valid" (click)="login(form.value)" type="submit" class="btn btn-primary btn-block btn-flat">Login</button>
           </div>
           
         </div>
