--- a/tcc-front-end/src/app/menu/menu.component.html
+++ b/tcc-front-end/src/app/menu/menu.component.html
@@ -1,13 +1,39 @@
 <aside class="main-sidebar">
   <section class = "sidebar">
+      <div class="user-panel">
+          <div class="pull-left image">
+            <img src="{{img_usuario}}" class="img-circle" alt="User Image">
+          </div>
+          <div class="pull-left info">
+            <p>{{user.nome}}</p>
+            <a><i class="fa fa-circle text-success"></i> Online</a>
+          </div>
+        </div>
     <ul class="sidebar-menu">
       <li class="header">ConnectU</li>
 
       <li>
         <a>
-          <i class="fa fa-retweet"></i> <span>Dashboard</span>
+          <i class="fa fa-home"></i> <span>Início</span>
         </a>
       </li>
+      <li class="treeview menu-open">
+          <a>
+            <i class="fa fa-dashboard"></i> <span>Solicitações</span>
+            <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+          </a>
+          <ul class="treeview-menu">
+            <li><a><i class="fa fa-circle-o"></i> Solicitações de amizade</a><span class="pull-right-container">
+                <small class="label pull-right bg-green">new</small>
+              </span></li>
+            <li><a><i class="fa fa-circle-o"></i> Novos depoimentos</a></li>
+            <li><a><i class="fa fa-circle-o"></i> Convite de grupo</a></li>
+
+          </ul>
+          
+        </li>
     </ul>
   </section>
 
