Menu, logout e algum corpo no inicio

--- a/tcc-front-end/src/app/dashboard/dashboard-main/dashboard-main.component.html
+++ b/tcc-front-end/src/app/dashboard/dashboard-main/dashboard-main.component.html
@@ -1,1 +1,46 @@
-<p>FUNCIONEOU</p>
+<section class ="content-header">
+    <h1> <i class = "fa fa-home"></i> Início</h1>
+</section>
+<section class = "content">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="small-box bg-aqua">
+                <div class="inner">
+                    <h3>150</h3>
+                    <h4>Depoimentos</h4>
+                </div>
+                <div class="icon">
+                    <i class="fa fa-comments"></i>
+                </div>
+                <a class="small-box-footer">Ver <i class="fa fa-arrow-circle-right"></i></a>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="small-box bg-red">
+                <div class="inner">
+                    <h3>15</h3>
+                    <h4>Grupos</h4>
+                </div>
+                <div class="icon">
+                    <i class="fa fa-tags"></i>
+                </div>
+                <a class="small-box-footer">Ver <i class="fa fa-arrow-circle-right"></i></a>
+            </div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="small-box bg-green">
+                <div class="inner">
+                    <h3>430</h3>
+                    <h4>Amigos</h4>
+                </div>
+                <div class="icon">
+                    <i class="fa fa-users"></i>
+                </div>
+                <a class="small-box-footer">Ver <i class="fa fa-arrow-circle-right"></i></a>
+            </div>
+        </div>
+    </div>
+
+</section>
