Adição de métodos contadores no back end

--- a/tcc-front-end/src/app/menu/menu.component.html
+++ b/tcc-front-end/src/app/menu/menu.component.html
@@ -45,7 +45,7 @@
         <li> <a> <i class="fa fa-users"></i> <span>Amigos</span></a></li>
         <li class="header">Navegação Secundária</li>
         <li> <a> <i class="fa fa-gear"></i> <span>Configurações</span></a></li>
-        <li> <a [routerLink]="['']" class="text-red"> <i class="fa fa-sign-out"></i> <span>Sair</span></a></li>
+        <li class="bg-gray"> <a [routerLink]="['']" class="text-red"> <i class="fa fa-sign-out"></i> <span>Sair</span></a></li>
     </ul>
   </section>
 
