Busca de pessoas básico

--- a/tcc-front-end/src/app/header/header.component.html
+++ b/tcc-front-end/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="main-header">
   <a class="logo">
-    <span class = "logo-mini">CU</span>
-    <span class="logo-lg">ConnectU</span>
+    <span class = "logo-mini"><b>QI</b> <i class = "fa fa-question"></i></span>
+    <span class="logo-lg"><b>Quem Indica</b> <i class = "fa fa-question"></i></span>
   </a>
 
   <nav class = "navbar navbar-static-top">
