--- a/tcc-front-end/src/app/login/login.component.html
+++ b/tcc-front-end/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="login-box">
     <div class="login-logo">
-      <a><b>Connect</b>U</a>
+      <a><b>Quem Indica <i class="fa fa-question"></i></b></a>
     </div>
     
     <div class="login-box-body">
