--- a/tcc-front-end/src/app/menu/menu.component.html
+++ b/tcc-front-end/src/app/menu/menu.component.html
@@ -8,7 +8,7 @@
         <p>{{user.nome}}</p>
       </div>
     </div>
-    <form class="sidebar-form">
+    <!-- <form class="sidebar-form">
       <div class="input-group">
         <input type="text" name="q" class="form-control" placeholder="Search...">
         <span class="input-group-btn">
@@ -16,10 +16,11 @@
           </button>
         </span>
       </div>
-    </form>
+    </form> -->
       
     <ul class="sidebar-menu">
       <li class="header">Navegação Principal</li>
+      <li><a [routerLink]="['busca']"><i class="fa fa-search"></i> <span> Buscar pessoas</span></a></li>
       <li><a><i class = "fa fa-user"></i> <span>Perfil</span></a></li>
       <li><a><i class="fa fa-home"></i> <span>Início</span></a></li>
       <li class="treeview menu-open">
