--- a/tcc-front-end/src/app/dashboard/dashboard-main/busca/busca.component.html
+++ b/tcc-front-end/src/app/dashboard/dashboard-main/busca/busca.component.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="box-footer no-padding">
                   <ul class="nav nav-stacked">
-                    <button type="button" class="btn btn-block btn-default">Ver Perfil</button> 
+                    <button type="button" class="btn btn-block btn-default" (click)="verPerfil(usuario.node._id)">Ver Perfil</button> 
                   </ul>
                 </div>
               </div>
