--- a/tcc-front-end/src/app/dashboard/dashboard-main/perfil/perfil.component.html
+++ b/tcc-front-end/src/app/dashboard/dashboard-main/perfil/perfil.component.html
@@ -1,3 +1,15 @@
-<p>
- {{id}}
-</p>
+<section class = "content">
+    <div class = "row">
+        <div class = "col-md-3">
+            <div class="box box-primary">
+                <div class="box-body box-profile">
+                    <img class="profile-user-img img-responsive img-circle" src="{{usuario.foto}}" alt="User profile picture">            
+                    <h3 class="profile-username text-center">{{usuario.nome}}</h3>
+                    <p class="text-muted text-center">{{usuario.profissao}}</p>
+                    <!-- <a href="#" class="btn btn-primary btn-block"><b>Follow</b></a> -->
+                </div>
+            </div>
+        </div>
+
+    </div>
+</section>
