--- a/tcc-front-end/src/app/menu/menu.component.html
+++ b/tcc-front-end/src/app/menu/menu.component.html
@@ -42,7 +42,7 @@
         </li>
 
         <li> <a> <i class="fa fa-comments"></i> <span>Depoimentos</span></a></li>
-        <li> <a> <i class="fa fa-tags"></i> <span>Grupos</span></a></li>
+        <li> <a [routerLink]="['grupos']"> <i class="fa fa-tags"></i> <span>Grupos</span></a></li>
         <li> <a> <i class="fa fa-users"></i> <span>Amigos</span></a></li>
         <li class="header">Navegação Secundária</li>
         <li> <a> <i class="fa fa-gear"></i> <span>Configurações</span></a></li>
