--- a/tcc-front-end/src/app/menu/menu.component.html
+++ b/tcc-front-end/src/app/menu/menu.component.html
@@ -11,13 +11,12 @@
       
     <ul class="sidebar-menu">
       <li class="header">Navegação Principal</li>
-      <li><a><i class="fa fa-home"></i> <span>Início</span></a></li>
+      <li><a [routerLink]="['/QuemIndica']"><i class="fa fa-home"></i> <span>Início</span></a></li>
       <li><a [routerLink]="['busca']"><i class="fa fa-search"></i> <span> Buscar pessoas</span></a></li>
-      <li><a><i class = "fa fa-user"></i> <span>Perfil</span></a></li>
-      <li><a><i class= "fa fa-certificate"></i><span>Solicitações</span></a></li>
+      <li><a (click) = "perfil()"><i class = "fa fa-user"></i> <span>Perfil</span></a></li>
+      <li> <a [routerLink]="['amigos']"> <i class="fa fa-users"></i> <span>Amigos</span></a></li>      
       <li> <a> <i class="fa fa-comments"></i> <span>Indicações</span></a></li>
       <li> <a [routerLink]="['grupos']"> <i class="fa fa-tags"></i> <span>Grupos</span></a></li>
-      <li> <a [routerLink]="['amigos']"> <i class="fa fa-users"></i> <span>Amigos</span></a></li>
       <li class="header">Navegação Secundária</li>
       <li class="bg-gray"> <a [routerLink]="['']" class="text-red"> <i class="fa fa-sign-out"></i> <span>Sair</span></a></li>
     </ul>
